--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
         <div class="numbertext"></div>
         <img src="images/04.png" style="width:100%">
         <div class="text"></div>
-      </div
+      </div>
       <div class="mySlides fade">
         <div class="numbertext"></div>
         <img src="images/05.png" style="width:100%">
         <div class="text"></div>
-      </div
+      </div>
       <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
       <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
@@ -148,6 +148,8 @@
       <span class="dot" onclick="currentSlide(1)"></span>
       <span class="dot" onclick="currentSlide(2)"></span>
       <span class="dot" onclick="currentSlide(3)"></span>
+      <span class="dot" onclick="currentSlide(4)"></span>
+      <span class="dot" onclick="currentSlide(5)"></span>
     </div>
     <script>
       var slideIndex = 0;
@@ -168,3 +170,4 @@
     </script>
   </body>
 </html>
+
